--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,7 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace:
+  enable: false
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -99,3 +96,4 @@ theme: hexo-theme-PureBlue
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
